[[bin]]
bench = false
name = "nu_plugin_kdl"

[dependencies]
kdl = { version = "6.5.0", features = ["v1"] }
miette = "7.6.0"
nu-plugin = "0.108.0"
nu-protocol = { version = "0.108.0", features = ["plugin"] }

[lib]
bench = false

[package]
authors = ["@amtoine"]
description = "Add support for the KDL data format to Nushell."
edition = "2021"
license = "GPLv3"
name = "nu_plugin_kdl"
repository = "https://github.com/amtoine/nu_plugin_kdl"
version = "0.108.0"
